[package]
name = "rusted_dice"
version = "0.1.0"
edition = "2021"
authors = ["MarkBrockettRobson"]
include = ["src"]

[lib]
name = "rusted_dice"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]


[dependencies]
mutants = "0.0.3"
prettytable-rs = "0.10.0"

[dev-dependencies]
test-case = "3.1.0"
proptest = "1.2.0"
cargo-llvm-cov = "0.5.23"
mockall = "0.11.4"
