[package]
name = "rusted_dice"
version = "0.1.0"
edition = "2021"
authors = ["MarkBrockettRobson"]
include = ["src"]

[lib]
name = "rusted_dice"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]


[dependencies]
mutants = "0.0.3"
prettytable-rs = "0.10.0"

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
test-case = "3.1.0"
cargo-llvm-cov = "0.6.10"
mockall = "0.12.1"
